--- a/.settings/projcfg.ini
+++ b/.settings/projcfg.ini
@@ -1,5 +1,5 @@
 #RT-Thread Studio Project Configuration
-#Mon Sep 19 11:21:10 CST 2022
+#Wed Oct 19 13:46:16 CST 2022
 project_type=rtt
 chip_name=STM32F407ZG
 cpu_name=None
@@ -17,6 +17,6 @@ tool_chain=gcc
 uart_name=uart1
 tx_pin_name=PA9
 rtt_nano_path=
-output_project_path=D\:/stm32/car
+output_project_path=D\:\\SRP
 hardware_adapter=DAP-LINK
 project_name=rt_car
