添加oled屏幕显示代码，创建定时器，每1秒更新一次速度显示

--- a/.config
+++ b/.config
@@ -407,7 +407,7 @@ CONFIG_U8G2_USE_HW_I2C=y
 CONFIG_U8G2_I2C_DEVICE_NAME="i2c1"
 # CONFIG_U8G2_USING_I2C_YL40 is not set
 # CONFIG_U8G2_USING_SW_I2C_SSD1306 is not set
-CONFIG_U8G2_USING_HW_I2C_SSD1306=y
+# CONFIG_U8G2_USING_HW_I2C_SSD1306 is not set
 # CONFIG_U8G2_USING_SW_SPI_SSD1306 is not set
 # CONFIG_U8G2_USING_8080_ST7920 is not set
 CONFIG_PKG_USING_U8G2=y
